- Fix history back not updating DOM - Fix when on about page logo redirecting to about - Fix graph expand overflow - Fix error message css - Inital redirection is replaced in history - Tweak animation to trying to hide component load/unload

--- a/static/global.css
+++ b/static/global.css
@@ -24,7 +24,7 @@ a:visited {
 	flex-direction: column;
 }
 
-.message {
+.main > .message {
 	z-index: -1;
 	position: fixed;
 	top: 0;
